[tool.poetry]
name = "hazard"
version = "0.1.0"
description = ""
authors = ["andre.liang <namwoam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
torch = {version = "2.1.0", source = "pytorch-gpu"}
torchvision = {version = "^0.16.0", source = "pytorch-gpu"}
torchaudio = {version = "^2.1.0", source = "pytorch-gpu"}
tdw = "^1.13.0.0"
mmcv = {version = "2.1.0", source = "mmcv-source"}
mmdet = "^3.3.0"
gym = "^0.26.2"
pyastar2d = "^1.0.6"
tiktoken = "^0.9.0"
openai = "^1.70.0"
backoff = "^2.2.1"
inflect = "^7.5.0"
streamlit = "^1.44.1"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[[tool.poetry.source]]
name = "mmcv-source"
url = "https://download.openmmlab.com/mmcv/dist/cu118/torch2.1/index.html"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
